--- a/app/src/app/pages/home/home.component.css
+++ b/app/src/app/pages/home/home.component.css
@@ -15,10 +15,9 @@
 }
 
 #homepage-content {
+    height: auto;
     flex-grow: 1;
-    height: 4000px;
     padding: 1rem;
-
 
     border-radius: 0.5rem;
     box-shadow: 1px 1px 2px var(--color-box-shadow);
